Fix color contrast

--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -12,6 +12,7 @@ header h5,
 header a,
 header .nav-link,
 .fas {
+  background-color: black;
   background-color: transparent;
     color: white;
     font-weight: bold;
